examples/test/testpolicy11380.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11380
  namespace: namespace211
spec:
  podSelector:
    matchLabels:
      key17: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value22
      podSelector:
        matchLabels:
          key35: value26
          key43: value9
          key38: value9
